[package]
name = "overdone0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
bevy = { version = "0.6.1", features = ["render", "dynamic"] }
bevy_asset_loader = { version = "0.9.0", features = ["render"] }
bevy_ecs_tilemap = "0.5.0"
bevy-inspector-egui = "0.8.2"
bevy_egui = "0.11.1"
tiled = { version = "0.9", default-features = false }
config = "0.12"
log = "0.4"